--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,12 @@
   }],
   "require": {
     "php": "^7.1",
+    "illuminate/support": "^4.0",
     "jenssegers/agent": "v2.6.0"
+  },
+  "require-dev": {
+    "mockery/mockery": "~1.0",
+    "phpunit/phpunit": "~6.0"
   },
   "autoload": {
     "psr-4": {
