--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   }],
   "require": {
     "php": "^7.1",
-    "illuminate/support": "^4.0",
+    "illuminate/support": "^4.0|^5.0",
     "jenssegers/agent": "v2.6.0"
   },
   "require-dev": {
